# controllers/users/getCurrent.js
@@ -1,6 +1,10 @@
 const getCurrent = (req, res, next) => {
   const { email, subscription, avatarURL } = req.user
-  res.json({ email, subscription, avatarURL })
+  res.json({
+    status: 'success',
+    code: 200,
+    user: { email, subscription, avatarURL },
+  })
 }
 
 module.exports = getCurrent
